--- a/GreatWall.Entities/GreatWall.Entities.csproj
+++ b/GreatWall.Entities/GreatWall.Entities.csproj
@@ -40,11 +40,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\TechProducts\Processor.cs" />
+    <Compile Include="Interfaces\IProduct.cs" />
+    <Compile Include="Interfaces\TechInterfaces\IBattery.cs" />
+    <Compile Include="Interfaces\TechInterfaces\IComputer.cs" />
+    <Compile Include="Interfaces\TechInterfaces\IDisplay.cs" />
+    <Compile Include="Interfaces\TechInterfaces\IMemory.cs" />
+    <Compile Include="Interfaces\TechInterfaces\IMotherboard.cs" />
+    <Compile Include="Interfaces\TechInterfaces\IPhone.cs" />
+    <Compile Include="Interfaces\TechInterfaces\IProcessor.cs" />
+    <Compile Include="Interfaces\TechInterfaces\IGraphicCard.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Entities\" />
-    <Folder Include="Interfaces\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
