--- a/GreatWall.Entities/GreatWall.Entities.csproj
+++ b/GreatWall.Entities/GreatWall.Entities.csproj
@@ -40,10 +40,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\TechProducts\Amplifier.cs" />
+    <Compile Include="Entities\TechProducts\Headphones.cs" />
+    <Compile Include="Entities\TechProducts\Column.cs" />
+    <Compile Include="Entities\TechProducts\MediaPlayer.cs" />
     <Compile Include="Entities\TechProducts\Processor.cs" />
+    <Compile Include="Entities\TechProducts\PortableColumn.cs" />
     <Compile Include="Enumerations\Category.cs" />
     <Compile Include="Enumerations\ComputerSubCategory.cs" />
     <Compile Include="Interfaces\IProduct.cs" />
+    <Compile Include="Interfaces\TechInterfaces\IAudio.cs" />
     <Compile Include="Interfaces\TechInterfaces\IBattery.cs" />
     <Compile Include="Interfaces\TechInterfaces\IDisplay.cs" />
     <Compile Include="Interfaces\TechInterfaces\IHardDrive.cs" />
