--- a/GreatWall.Entities/GreatWall.Entities.csproj
+++ b/GreatWall.Entities/GreatWall.Entities.csproj
@@ -42,7 +42,7 @@
   <ItemGroup>
     <Compile Include="Entities\TechProducts\Processor.cs" />
     <Compile Include="Enumerations\Category.cs" />
-    <Compile Include="Enumerations\ComputerSubCategory.cs" />
+    <Compile Include="Enumerations\SubCategory.cs" />
     <Compile Include="Interfaces\IProduct.cs" />
     <Compile Include="Interfaces\TechInterfaces\IBattery.cs" />
     <Compile Include="Interfaces\TechInterfaces\IDisplay.cs" />
