--- a/GreatWall.Entities/GreatWall.Entities.csproj
+++ b/GreatWall.Entities/GreatWall.Entities.csproj
@@ -41,10 +41,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\TechProducts\Amplifier.cs" />
+    <Compile Include="Entities\TechProducts\Cameras\PhotographicCamera.cs" />
+    <Compile Include="Entities\TechProducts\Cameras\VideoCamera.cs" />
+    <Compile Include="Entities\TechProducts\Computers\Laptop.cs" />
+    <Compile Include="Entities\TechProducts\Computers\PersonalComputer.cs" />
     <Compile Include="Entities\TechProducts\Headphones.cs" />
+    <Compile Include="Entities\TechProducts\Other\Battery.cs" />
+    <Compile Include="Entities\TechProducts\Other\HardDrive.cs" />
+    <Compile Include="Entities\TechProducts\Phones\Phone.cs" />
+    <Compile Include="Entities\TechProducts\Phones\SmartPhone.cs" />
+    <Compile Include="Entities\TechProducts\Tvs\SmartTv.cs" />
     <Compile Include="Entities\TechProducts\Speaker.cs" />
     <Compile Include="Entities\TechProducts\MediaPlayer.cs" />
     <Compile Include="Entities\TechProducts\Processor.cs" />
+    <Compile Include="Entities\TechProducts\Tvs\Tv.cs" />
     <Compile Include="Enumerations\Category.cs" />
     <Compile Include="Enumerations\SubCategory.cs" />
     <Compile Include="Interfaces\IProduct.cs" />
