--- a/GreatWall.Entities/GreatWall.Entities.csproj
+++ b/GreatWall.Entities/GreatWall.Entities.csproj
@@ -40,25 +40,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\TechProducts\Amplifier.cs" />
+    <Compile Include="Entities\TechProducts\Audio\Amplifier.cs" />
     <Compile Include="Entities\TechProducts\Cameras\PhotographicCamera.cs" />
     <Compile Include="Entities\TechProducts\Cameras\VideoCamera.cs" />
     <Compile Include="Entities\TechProducts\Computers\Laptop.cs" />
     <Compile Include="Entities\TechProducts\Computers\PersonalComputer.cs" />
-    <Compile Include="Entities\TechProducts\Headphones.cs" />
-    <Compile Include="Entities\TechProducts\Other\Battery.cs" />
-    <Compile Include="Entities\TechProducts\Other\HardDrive.cs" />
+    <Compile Include="Entities\TechProducts\Audio\Headphone.cs" />
+    <Compile Include="Entities\TechProducts\Computers\Battery.cs" />
+    <Compile Include="Entities\TechProducts\Computers\HardDrive.cs" />
     <Compile Include="Entities\TechProducts\Phones\Phone.cs" />
     <Compile Include="Entities\TechProducts\Phones\SmartPhone.cs" />
     <Compile Include="Entities\TechProducts\Tvs\SmartTv.cs" />
-    <Compile Include="Entities\TechProducts\Speaker.cs" />
-    <Compile Include="Entities\TechProducts\MediaPlayer.cs" />
-    <Compile Include="Entities\TechProducts\Processor.cs" />
+    <Compile Include="Entities\TechProducts\Audio\Speaker.cs" />
+    <Compile Include="Entities\TechProducts\Audio\MediaPlayer.cs" />
+    <Compile Include="Entities\TechProducts\Computers\Processor.cs" />
     <Compile Include="Entities\TechProducts\Tvs\Tv.cs" />
     <Compile Include="Enumerations\Category.cs" />
     <Compile Include="Enumerations\SubCategory.cs" />
     <Compile Include="Interfaces\IProduct.cs" />
-    <Compile Include="Interfaces\Product.cs" />
+    <Compile Include="Entities\Product.cs" />
     <Compile Include="Interfaces\TechInterfaces\I3DGlasses.cs" />
     <Compile Include="Interfaces\TechInterfaces\IAudio.cs" />
     <Compile Include="Interfaces\TechInterfaces\IBattery.cs" />
@@ -76,6 +76,8 @@
     <Compile Include="Interfaces\TechInterfaces\IGraphicCard.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Entities\TechProducts\Other\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
