--- a/GreatWall.Entities/GreatWall.Entities.csproj
+++ b/GreatWall.Entities/GreatWall.Entities.csproj
@@ -43,37 +43,47 @@
     <Compile Include="Entities\TechProducts\Audio\Amplifier.cs" />
     <Compile Include="Entities\TechProducts\Cameras\PhotographicCamera.cs" />
     <Compile Include="Entities\TechProducts\Cameras\VideoCamera.cs" />
+    <Compile Include="Entities\TechProducts\Computers\Display.cs" />
+    <Compile Include="Entities\TechProducts\Computers\GraphicCard.cs" />
     <Compile Include="Entities\TechProducts\Computers\Laptop.cs" />
-    <Compile Include="Entities\TechProducts\Computers\PersonalComputer.cs" />
+    <Compile Include="Entities\TechProducts\Computers\Memory.cs" />
+    <Compile Include="Entities\TechProducts\Computers\Motherboard.cs" />
+    <Compile Include="Entities\TechProducts\Computers\PC.cs" />
     <Compile Include="Entities\TechProducts\Audio\Headphone.cs" />
     <Compile Include="Entities\TechProducts\Computers\Battery.cs" />
     <Compile Include="Entities\TechProducts\Computers\HardDrive.cs" />
+    <Compile Include="Entities\TechProducts\Computers\PowerSupply.cs" />
     <Compile Include="Entities\TechProducts\Phones\Phone.cs" />
     <Compile Include="Entities\TechProducts\Phones\SmartPhone.cs" />
-    <Compile Include="Entities\TechProducts\Tvs\SmartTv.cs" />
+    <Compile Include="Entities\TechProducts\TVs\SmartTV.cs" />
     <Compile Include="Entities\TechProducts\Audio\Speaker.cs" />
     <Compile Include="Entities\TechProducts\Audio\MediaPlayer.cs" />
     <Compile Include="Entities\TechProducts\Computers\Processor.cs" />
-    <Compile Include="Entities\TechProducts\Tvs\Tv.cs" />
+    <Compile Include="Entities\TechProducts\TVs\TV.cs" />
     <Compile Include="Enumerations\Category.cs" />
     <Compile Include="Enumerations\SubCategory.cs" />
     <Compile Include="Interfaces\IProduct.cs" />
     <Compile Include="Entities\Product.cs" />
-    <Compile Include="Interfaces\TechInterfaces\I3DGlasses.cs" />
+    <Compile Include="Interfaces\TechInterfaces\IAmplifier.cs" />
     <Compile Include="Interfaces\TechInterfaces\IAudio.cs" />
     <Compile Include="Interfaces\TechInterfaces\IBattery.cs" />
     <Compile Include="Interfaces\TechInterfaces\IDisplay.cs" />
-    <Compile Include="Interfaces\TechInterfaces\IExternalFlashDrive.cs" />
     <Compile Include="Interfaces\TechInterfaces\IHardDrive.cs" />
-    <Compile Include="Interfaces\TechInterfaces\ILens.cs" />
+    <Compile Include="Interfaces\TechInterfaces\IHeadphone.cs" />
+    <Compile Include="Interfaces\TechInterfaces\ILaptop.cs" />
     <Compile Include="Interfaces\TechInterfaces\IMemory.cs" />
     <Compile Include="Interfaces\TechInterfaces\IMotherboard.cs" />
     <Compile Include="Interfaces\TechInterfaces\IMediaPlayer.cs" />
-    <Compile Include="Interfaces\TechInterfaces\IOperationalSystem.cs" />
     <Compile Include="Interfaces\TechInterfaces\IPhone.cs" />
     <Compile Include="Interfaces\TechInterfaces\IPowerSupply.cs" />
     <Compile Include="Interfaces\TechInterfaces\IProcessor.cs" />
     <Compile Include="Interfaces\TechInterfaces\IGraphicCard.cs" />
+    <Compile Include="Interfaces\TechInterfaces\IPC.cs" />
+    <Compile Include="Interfaces\TechInterfaces\ISmartPhone.cs" />
+    <Compile Include="Interfaces\TechInterfaces\ISmartTv.cs" />
+    <Compile Include="Interfaces\TechInterfaces\ISpeaker.cs" />
+    <Compile Include="Interfaces\TechInterfaces\ITv.cs" />
+    <Compile Include="Interfaces\TechInterfaces\IVideoCamera.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
