--- a/GreatWall.Client/GreatWall.Client.csproj
+++ b/GreatWall.Client/GreatWall.Client.csproj
@@ -47,6 +47,7 @@
     <Compile Include="SeedData\Seed.cs" />
     <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StaticData\Constants.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
