--- a/GreatWall.Entities/GreatWall.Entities.csproj
+++ b/GreatWall.Entities/GreatWall.Entities.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Entities\Console\ConsoleCursor.cs" />
     <Compile Include="Entities\Console\ConsoleReader.cs" />
     <Compile Include="Entities\Console\ConsoleWriter.cs" />
+    <Compile Include="Entities\Customers\Customer.cs" />
     <Compile Include="Entities\TechProducts\Audio\Amplifier.cs" />
     <Compile Include="Entities\TechProducts\Cameras\PhotographicCamera.cs" />
     <Compile Include="Entities\TechProducts\Cameras\VideoCamera.cs" />
@@ -70,6 +71,7 @@
     <Compile Include="Interfaces\Console\ICursor.cs" />
     <Compile Include="Interfaces\Console\IReader.cs" />
     <Compile Include="Interfaces\Console\IWriter.cs" />
+    <Compile Include="Interfaces\Customers\ICustomer.cs" />
     <Compile Include="Interfaces\IProduct.cs" />
     <Compile Include="Entities\Product.cs" />
     <Compile Include="Interfaces\TechInterfaces\IAmplifier.cs" />
