--- a/GreatWall.Entities/GreatWall.Entities.csproj
+++ b/GreatWall.Entities/GreatWall.Entities.csproj
@@ -74,6 +74,8 @@
     <Compile Include="Interfaces\Customers\ICustomer.cs" />
     <Compile Include="Interfaces\IProduct.cs" />
     <Compile Include="Entities\Product.cs" />
+    <Compile Include="Interfaces\Repository\IClientRepository.cs" />
+    <Compile Include="Interfaces\Repository\IProductRepository.cs" />
     <Compile Include="Interfaces\TechInterfaces\IAmplifier.cs" />
     <Compile Include="Interfaces\TechInterfaces\IAudio.cs" />
     <Compile Include="Interfaces\TechInterfaces\IBattery.cs" />
