--- a/GreatWall.Client/GreatWall.Client.csproj
+++ b/GreatWall.Client/GreatWall.Client.csproj
@@ -45,12 +45,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\DataCollector.cs" />
     <Compile Include="Core\Engine.cs" />
     <Compile Include="Factory\CustomerFactory.cs" />
     <Compile Include="Factory\ProductFactory.cs" />
     <Compile Include="SaleLogger\Logger.cs" />
     <Compile Include="Repositories\ProductsRepository.cs" />
-    <Compile Include="SeedData\Seed.cs" />
+    <Compile Include="SeedData\CustomersSeed.cs" />
+    <Compile Include="SeedData\ProductsSeed.cs" />
     <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StaticData\Constants.cs" />
