--- a/GreatWall.Entities/GreatWall.Entities.csproj
+++ b/GreatWall.Entities/GreatWall.Entities.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Interfaces\Console\IReader.cs" />
     <Compile Include="Interfaces\Console\IWriter.cs" />
     <Compile Include="Interfaces\Customers\ICustomer.cs" />
+    <Compile Include="Interfaces\DataCollector\ICollector.cs" />
     <Compile Include="Interfaces\IProduct.cs" />
     <Compile Include="Entities\Product.cs" />
     <Compile Include="Interfaces\Repository\IRepository.cs" />
