--- a/GreatWall.Client/GreatWall.Client.csproj
+++ b/GreatWall.Client/GreatWall.Client.csproj
@@ -51,8 +51,8 @@
     <Compile Include="Factory\ProductFactory.cs" />
     <Compile Include="SaleLogger\Logger.cs" />
     <Compile Include="Repositories\ProductsRepository.cs" />
-    <Compile Include="SeedData\CustomersSeed.cs" />
-    <Compile Include="SeedData\ProductsSeed.cs" />
+    <Compile Include="SeedData\CustomerSeeder.cs" />
+    <Compile Include="SeedData\ProductsSeeder.cs" />
     <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StaticData\Constants.cs" />
