--- a/GreatWall.Entities/GreatWall.Entities.csproj
+++ b/GreatWall.Entities/GreatWall.Entities.csproj
@@ -40,8 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\Console\ConsoleColour.cs" />
-    <Compile Include="Entities\Console\ConsoleCursor.cs" />
+    <Compile Include="Entities\Console\ConsoleManipulator.cs" />
     <Compile Include="Entities\Console\ConsoleReader.cs" />
     <Compile Include="Entities\Console\ConsoleWriter.cs" />
     <Compile Include="Entities\Customers\Customer.cs" />
@@ -70,12 +69,12 @@
     <Compile Include="Exceptions\InvalidUsernamerOrPasswordException.cs" />
     <Compile Include="Exceptions\NegativeNumberException.cs" />
     <Compile Include="Exceptions\NotEnoughProductsException.cs" />
-    <Compile Include="Interfaces\Console\IColor.cs" />
-    <Compile Include="Interfaces\Console\ICursor.cs" />
+    <Compile Include="Interfaces\Console\IConsoleManipulator.cs" />
     <Compile Include="Interfaces\Console\IReader.cs" />
     <Compile Include="Interfaces\Console\IWriter.cs" />
     <Compile Include="Interfaces\Customers\ICustomer.cs" />
     <Compile Include="Interfaces\DataCollector\ICollector.cs" />
+    <Compile Include="Interfaces\Engine\IEngine.cs" />
     <Compile Include="Interfaces\IProduct.cs" />
     <Compile Include="Entities\Product.cs" />
     <Compile Include="Interfaces\Repository\IRepository.cs" />
